css/style.css
/* ... */
.dark-mode .sidebar {
    background-color: #323232;
    border-left: 1px solid #262626;
}

.sidebar a {
    padding: 8px 8px 8px 0px;
    text-decoration: none;
    font-size: 0.9em;
    color: #818181;
    display: block;
    transition: 0.3s;
}

.sidebar a:hover {
    color: #f1f1f1;
}
.sidebar-open {
    right: 0; /* Muestra el sidebar cuando se agrega la clase 'sidebar-open' */
}

.sidebar ul {
    margin: 0;
    padding: 0;
}

.sidebar ul li {
    list-style: none;
}

.sidebar h2 {
    font-size: 1em;
    margin: 1.4em 0 0.2em 0
}

.sidebar .sidebar-links {
    margin: 0 0 0 32px;
}

.sidebar #sidebar-stops {
    padding-left: 32px;
    padding-bottom: 90px;
}

.sidebar #scrollTop {
    background-color: transparent;
    background-image: url('/img/arrow-up.png');
    background-size: 14px;
    background-repeat: no-repeat;
    padding: 0 0 0 20px;
    margin: 20px 0px;
}
.sidebar #nearestStops {
    display: flex;
}

.sidebar .sidebar-footer {
    background-image: url("/img/pin-transparent.png");
    background-size: 10px;
    background-repeat: no-repeat;
    font-size: 0.75em;
    padding-left: 18px;
    background-position: 0px 3px;
    color: #CCC;
}

.dark-mode .sidebar .sidebar-footer {
    background-image: url("/img/pin-transparent-light.png");
    background-size: 10px;
    background-repeat: no-repeat;
    background-position: 0px 3px;
    max-width: 100%;
    overflow: auto;
}

#fav-destinations {
    background-color: #fff;
    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
    border: 1px solid #CCCCCCBA;
    border-radius: 4px;
    margin: 10px 4px 15px 4px;
    position: relative;
    font-size: 0.9em;
    display: flex;
    align-items: center;
    padding: 10px;
    overflow: hidden;
}

.dark-mode #fav-destinations {
    background-color: #333 !important;
    color: #eeeeee;
    border: 1px solid #404040BA !important;
}

#fav-destinations p {
    font-weight: bold;
    background-image: url("/img/directions.png");
    background-size: 20px;
    background-repeat: no-repeat;
    background-position: center;
    width: 20px;
    height: 20px;
    text-indent: -9999px;
    overflow: hidden;
    margin: 0 4px 0 0;
}

#fav-destinations ul {
    display: flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
    gap: 10px;
    flex-wrap: nowrap;
    overflow-x: hidden;
    transition: all 0.3s ease;
    flex-grow: 1;
    max-height: 40px;
}

#fav-destinations.overflowing ul {
    margin-right: 30px;
}

#expand-favorites {
    position: absolute;
    right: 5px;
    top: 50%;
    transform: translateY(-50%);
    background-color: transparent;
    border: none;
    border-radius: 50%;
    width: 24px;
    height: 24px;
    font-size: 18px;
    line-height: 24px;
    text-align: center;
    cursor: pointer;
    z-index: 1;
    background-image: url('../img/arrow-down.png');
    background-size: 12px;
    background-repeat: no-repeat;
    background-position: center;
}

#fav-destinations.expanded #expand-favorites {
    background-image: url('../img/arrow-up.png');
}

#addFavoriteButton, #configFavoritesButton {
    flex-shrink: 0;
    margin-left: 10px;
}

#fav-destinations li {
    background-color: #f0f0f0;
    border-radius: 20px;
    padding: 5px 15px 5px 35px;
    position: relative;
    cursor: pointer;
    transition: background-color 0.3s ease;
    text-transform: uppercase;
}

.dark-mode #fav-destinations li {
    background-color: #404040;
    color: #eeeeee;
}

#fav-destinations li::before {
    content: '';
    background-image: url("/img/star.png");
    background-size: 16px;
    background-repeat: no-repeat;
    width: 16px;
    height: 16px;
    position: absolute;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
}

#fav-destinations #home-destination::before {
    background-image: url("/img/home.png");
}

#fav-destinations li:hover {
    background-color: #e0e0e0;
}

.dark-mode #fav-destinations li:hover {
    background-color: #404040;
}

#addFavoriteButton {
    background-color: #f0f0f0;
    border: none;
    border-radius: 50%;
    padding: 5px;
    font-size: 1.2em;
    background-image: url("/img/add.png");
    background-size: 10px;
    background-repeat: no-repeat;
    background-position: center;
    width: 20px;
    height: 20px;
    text-indent: -9999px;
    overflow: hidden;
}

.dark-mode #addFavoriteButton {
    background-color: #404040;
}

#welcome-box {
    position: relative;
    border-radius: 12px;
    overflow: auto;
    background: #fff;
    box-shadow: 0 8px 64px 0 rgba(12,12,14,.12);
    width: 90%;
    margin: 1em auto 1em auto;
    padding: 150px 0 5px 0;
    background: url("/img/welcome-logo.png") no-repeat #FFF center 8px;
    background-size: 140px;
    border: 1px solid #CCCCCCBA;
    display: none;
}

#welcome-box h2 {
    font-size: 1em;
    line-height: 1em;
    color: #0c0c0e;
    font-weight: bold;
    padding: 0 20px;
}

#welcome-box p {
    padding: 0 20px;
    font-size: 0.9em;
}

.ios-only {
    display: none;
}

/* en iOS mostramos la clase */
html.ios .ios-only {
    display: block;
}

#welcome-box .ios-only video {
    max-width: 75%;
    margin: auto;
    display: block;
}

#welcome-box span.button-sample {
    margin: 0px 0 0 0;
    background-color: #c1c4ca;
    background-image: url("/img/add.png");
    background-size: 8px;
    width: 0px;
    height: 0px;
    text-indent: -9999px;
    padding: 10px;
    background-repeat: no-repeat;
    color: rgb(5, 5, 6);
    border-radius: 50%;
    border: 1px solid #cdcdcd;
    display: inline-block;
    background-position: 6px 6px;
    position: absolute;
}

.stop-block, #nearestStopsResults .stopResult {
    background-color: #fff;
    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
    border: 1px solid #CCCCCCBA;
    border-radius: 4px;
    margin: 0 4px 15px 4px;
    position: relative;
}
/* ... */

